--- a/Tensorflow/tutorial_stuff/03_LinearRegression.ipynb
+++ b/Tensorflow/tutorial_stuff/03_LinearRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,38 @@
     "np.set_printoptions(precision=3, suppress=True) #numpy outputs einfacher zu lesen\n",
     "\n",
     "import tensorflow as tf\n",
+    "\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
-    "from tensorflow.keras.layers.experimental import preprocessing\n"
+    "from tensorflow.keras.layers.experimental import preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Generation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://archive.ics.uci.edu/ml/datasets/Auto+MPG\n",
+    "url = 'http://archive.ics.uci.edu/ml/machine-learning-databases/auto-mpg/auto-mpg.data'\n",
+    "column_names = ['MPG', 'Cylinders', 'Displacement', 'Horsepower', 'Weight',\n",
+    "                'Acceleration', 'Model Year', 'Origin']\n",
+    "\n",
+    "dataset = pd.read_csv(url, names=column_names, na_values='?',\n",
+    "                      comment='\\t', sep=' ', skipinitialspace=True)\n",
+    "                      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -60,91 +84,483 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>393</th>\n",
-       "      <td>27.0   4   140.0      86.00      2790.      15...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>2790.0</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>394</th>\n",
-       "      <td>44.0   4   97.00      52.00      2130.      24...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2130.0</td>\n",
+       "      <td>24.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>395</th>\n",
-       "      <td>32.0   4   135.0      84.00      2295.      11...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>2295.0</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>396</th>\n",
-       "      <td>28.0   4   120.0      79.00      2625.      18...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>2625.0</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>397</th>\n",
-       "      <td>31.0   4   119.0      82.00      2720.      19...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>2720.0</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   MPG  Cylinders  \\\n",
-       "393  27.0   4   140.0      86.00      2790.      15...        NaN   \n",
-       "394  44.0   4   97.00      52.00      2130.      24...        NaN   \n",
-       "395  32.0   4   135.0      84.00      2295.      11...        NaN   \n",
-       "396  28.0   4   120.0      79.00      2625.      18...        NaN   \n",
-       "397  31.0   4   119.0      82.00      2720.      19...        NaN   \n",
+       "      MPG  Cylinders  Displacement  Horsepower  Weight  Acceleration  \\\n",
+       "393  27.0          4         140.0        86.0  2790.0          15.6   \n",
+       "394  44.0          4          97.0        52.0  2130.0          24.6   \n",
+       "395  32.0          4         135.0        84.0  2295.0          11.6   \n",
+       "396  28.0          4         120.0        79.0  2625.0          18.6   \n",
+       "397  31.0          4         119.0        82.0  2720.0          19.4   \n",
        "\n",
-       "     Displacement  Horsepower  Weight  Acceleration  Model Year  Origin  \n",
-       "393           NaN         NaN     NaN           NaN         NaN     NaN  \n",
-       "394           NaN         NaN     NaN           NaN         NaN     NaN  \n",
-       "395           NaN         NaN     NaN           NaN         NaN     NaN  \n",
-       "396           NaN         NaN     NaN           NaN         NaN     NaN  \n",
-       "397           NaN         NaN     NaN           NaN         NaN     NaN  "
+       "     Model Year  Origin  \n",
+       "393          82       1  \n",
+       "394          82       2  \n",
+       "395          82       1  \n",
+       "396          82       1  \n",
+       "397          82       1  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = 'http://archive.ics.uci.edu/ml/machine-learning-databases/auto-mpg/auto-mpg.data'\n",
-    "column_names = ['MPG', 'Cylinders', 'Displacement', 'Horsepower', 'Weight', 'Acceleration', 'Model Year', 'Origin']\n",
-    "\n",
-    "dataset = pd.read_csv(url, names=column_names, na_values='?', comment='\\t', skipinitialspace=True)\n",
     "dataset.tail()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MPG</th>\n",
+       "      <th>Cylinders</th>\n",
+       "      <th>Displacement</th>\n",
+       "      <th>Horsepower</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Acceleration</th>\n",
+       "      <th>Model Year</th>\n",
+       "      <th>USA</th>\n",
+       "      <th>Europe</th>\n",
+       "      <th>Japan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>2790.0</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>394</th>\n",
+       "      <td>44.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2130.0</td>\n",
+       "      <td>24.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>32.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>135.0</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>2295.0</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>2625.0</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>2720.0</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>82</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      MPG  Cylinders  Displacement  Horsepower  Weight  Acceleration  \\\n",
+       "393  27.0          4         140.0        86.0  2790.0          15.6   \n",
+       "394  44.0          4          97.0        52.0  2130.0          24.6   \n",
+       "395  32.0          4         135.0        84.0  2295.0          11.6   \n",
+       "396  28.0          4         120.0        79.0  2625.0          18.6   \n",
+       "397  31.0          4         119.0        82.0  2720.0          19.4   \n",
+       "\n",
+       "     Model Year  USA  Europe  Japan  \n",
+       "393          82    1       0      0  \n",
+       "394          82    0       1      0  \n",
+       "395          82    1       0      0  \n",
+       "396          82    1       0      0  \n",
+       "397          82    1       0      0  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = dataset.dropna()\n",
+    "\n",
+    "origin = dataset.pop('Origin')\n",
+    "dataset['USA'] = (origin == 1) * 1\n",
+    "dataset['Europe'] = (origin == 2) * 1\n",
+    "dataset['Japan'] = (origin == 3) * 1\n",
+    "\n",
+    "dataset.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(392, 10) (314, 10) (78, 10)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MPG</th>\n",
+       "      <td>314.0</td>\n",
+       "      <td>23.310510</td>\n",
+       "      <td>7.728652</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>17.00</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>28.95</td>\n",
+       "      <td>46.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cylinders</th>\n",
+       "      <td>314.0</td>\n",
+       "      <td>5.477707</td>\n",
+       "      <td>1.699788</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Displacement</th>\n",
+       "      <td>314.0</td>\n",
+       "      <td>195.318471</td>\n",
+       "      <td>104.331589</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>105.50</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>265.75</td>\n",
+       "      <td>455.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Horsepower</th>\n",
+       "      <td>314.0</td>\n",
+       "      <td>104.869427</td>\n",
+       "      <td>38.096214</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>76.25</td>\n",
+       "      <td>94.5</td>\n",
+       "      <td>128.00</td>\n",
+       "      <td>225.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Weight</th>\n",
+       "      <td>314.0</td>\n",
+       "      <td>2990.251592</td>\n",
+       "      <td>843.898596</td>\n",
+       "      <td>1649.0</td>\n",
+       "      <td>2256.50</td>\n",
+       "      <td>2822.5</td>\n",
+       "      <td>3608.00</td>\n",
+       "      <td>5140.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Acceleration</th>\n",
+       "      <td>314.0</td>\n",
+       "      <td>15.559236</td>\n",
+       "      <td>2.789230</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>13.80</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>17.20</td>\n",
+       "      <td>24.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Model Year</th>\n",
+       "      <td>314.0</td>\n",
+       "      <td>75.898089</td>\n",
+       "      <td>3.675642</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>73.00</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>79.00</td>\n",
+       "      <td>82.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USA</th>\n",
+       "      <td>314.0</td>\n",
+       "      <td>0.624204</td>\n",
+       "      <td>0.485101</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Europe</th>\n",
+       "      <td>314.0</td>\n",
+       "      <td>0.178344</td>\n",
+       "      <td>0.383413</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Japan</th>\n",
+       "      <td>314.0</td>\n",
+       "      <td>0.197452</td>\n",
+       "      <td>0.398712</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              count         mean         std     min      25%     50%  \\\n",
+       "MPG           314.0    23.310510    7.728652    10.0    17.00    22.0   \n",
+       "Cylinders     314.0     5.477707    1.699788     3.0     4.00     4.0   \n",
+       "Displacement  314.0   195.318471  104.331589    68.0   105.50   151.0   \n",
+       "Horsepower    314.0   104.869427   38.096214    46.0    76.25    94.5   \n",
+       "Weight        314.0  2990.251592  843.898596  1649.0  2256.50  2822.5   \n",
+       "Acceleration  314.0    15.559236    2.789230     8.0    13.80    15.5   \n",
+       "Model Year    314.0    75.898089    3.675642    70.0    73.00    76.0   \n",
+       "USA           314.0     0.624204    0.485101     0.0     0.00     1.0   \n",
+       "Europe        314.0     0.178344    0.383413     0.0     0.00     0.0   \n",
+       "Japan         314.0     0.197452    0.398712     0.0     0.00     0.0   \n",
+       "\n",
+       "                  75%     max  \n",
+       "MPG             28.95    46.6  \n",
+       "Cylinders        8.00     8.0  \n",
+       "Displacement   265.75   455.0  \n",
+       "Horsepower     128.00   225.0  \n",
+       "Weight        3608.00  5140.0  \n",
+       "Acceleration    17.20    24.8  \n",
+       "Model Year      79.00    82.0  \n",
+       "USA              1.00     1.0  \n",
+       "Europe           0.00     1.0  \n",
+       "Japan            0.00     1.0  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_dataset = dataset.sample(frac=0.8, random_state=0)\n",
+    "test_dataset = dataset.drop(train_dataset.index)\n",
+    "\n",
+    "print(dataset.shape, train_dataset.shape, test_dataset.shape)\n",
+    "train_dataset.describe().transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_features = train_dataset.copy()\n",
+    "test_features = test_dataset.copy()\n",
+    "\n",
+    "train_labels = train_features.pop('MPG')\n",
+    "test_labels = test_features.pop('MPG')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (4159402207.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/f_/h4870ndd4q3b0bssqc3g47180000gn/T/ipykernel_2046/4159402207.py\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def plot(feature, x = None, y = None):\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
+   "source": [
+    "def plot(feature, x = None, y = None):\n",
+    "    plt.figure(figsize=(12,8))\n",
+    "    plt.scatter(train_features[feature], train_labels, label='Data')\n",
+    "    if x is not None and y is not None:\n",
+    "        plt.plot(x, y, color='k', label='Predictions')\n",
+    "    plt.xlabel(feature)\n",
+    "    plt.ylabel('MPG')\n",
+    "    plt.legend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
