--- a/Mlflow/tutorial_stuff/rubert_part1.ipynb
+++ b/Mlflow/tutorial_stuff/rubert_part1.ipynb
@@ -52,53 +52,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/12/13 11:05:52 INFO mlflow.store.db.utils: Creating initial MLflow database tables...\n",
-      "2023/12/13 11:05:52 INFO mlflow.store.db.utils: Updating database tables\n",
-      "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
-      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
-      "INFO  [alembic.runtime.migration] Running upgrade  -> 451aebb31d03, add metric step\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 451aebb31d03 -> 90e64c465722, migrate user column to tags\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 90e64c465722 -> 181f10493468, allow nulls for metric values\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 181f10493468 -> df50e92ffc5e, Add Experiment Tags Table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade df50e92ffc5e -> 7ac759974ad8, Update run tags with larger limit\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 7ac759974ad8 -> 89d4b8295536, create latest metrics table\n",
-      "INFO  [89d4b8295536_create_latest_metrics_table_py] Migration complete!\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 89d4b8295536 -> 2b4d017a5e9b, add model registry tables to db\n",
-      "INFO  [2b4d017a5e9b_add_model_registry_tables_to_db_py] Adding registered_models and model_versions tables to database.\n",
-      "INFO  [2b4d017a5e9b_add_model_registry_tables_to_db_py] Migration complete!\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 2b4d017a5e9b -> cfd24bdc0731, Update run status constraint with killed\n",
-      "INFO  [alembic.runtime.migration] Running upgrade cfd24bdc0731 -> 0a8213491aaa, drop_duplicate_killed_constraint\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 0a8213491aaa -> 728d730b5ebd, add registered model tags table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 728d730b5ebd -> 27a6a02d2cf1, add model version tags table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 27a6a02d2cf1 -> 84291f40a231, add run_link to model_version\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 84291f40a231 -> a8c4a736bde6, allow nulls for run_id\n",
-      "INFO  [alembic.runtime.migration] Running upgrade a8c4a736bde6 -> 39d1c3be5f05, add_is_nan_constraint_for_metrics_tables_if_necessary\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 39d1c3be5f05 -> c48cb773bb87, reset_default_value_for_is_nan_in_metrics_table_for_mysql\n",
-      "INFO  [alembic.runtime.migration] Running upgrade c48cb773bb87 -> bd07f7e963c5, create index on run_uuid\n",
-      "INFO  [alembic.runtime.migration] Running upgrade bd07f7e963c5 -> 0c779009ac13, add deleted_time field to runs table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 0c779009ac13 -> cc1f77228345, change param value length to 500\n",
-      "INFO  [alembic.runtime.migration] Running upgrade cc1f77228345 -> 97727af70f4d, Add creation_time and last_update_time to experiments table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 97727af70f4d -> 3500859a5d39, Add Model Aliases table\n",
-      "INFO  [alembic.runtime.migration] Running upgrade 3500859a5d39 -> 7f2a7d5fae7d, add datasets inputs input_tags tables\n",
-      "INFO  [alembic.runtime.migration] Context impl SQLiteImpl.\n",
-      "INFO  [alembic.runtime.migration] Will assume non-transactional DDL.\n",
-      "2023/12/13 11:05:52 INFO mlflow.tracking.fluent: Experiment with name 'income' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "<Experiment: artifact_location='/Users/simon/Documents/Master/Sonstiges/Python/Data_Science/Mlflow/tutorial_stuff/mlruns/1', creation_time=1702461952589, experiment_id='1', last_update_time=1702461952589, lifecycle_stage='active', name='income', tags={}>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,20 +258,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023/12/13 11:14:02 WARNING mlflow.utils.environment: Encountered an unexpected error while inferring pip requirements (model URI: /var/folders/f_/h4870ndd4q3b0bssqc3g47180000gn/T/tmpyu8xojiw/model/model.pkl, flavor: sklearn), fall back to return ['scikit-learn==1.2.0', 'cloudpickle==2.0.0']. Set logging level to DEBUG to see the full traceback.\n",
-      "/Users/simon/opt/anaconda3/lib/python3.9/site-packages/_distutils_hack/__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
-      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
-     ]
-    }
-   ],
+   "source": [
+    "## Baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "mlflow.sklearn.autolog(disable=True)\n",
     "#Disable autolog, because we log manually\n",
